[package]
name = "charsub"
version = "0.2.0"
authors = ["Skarlett <zykl@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "charsub"

[dependencies]
smallvec = "*"
threadpool = "*"
tokio = { version = "0.3", features = ["stream", "rt", "parking_lot", "sync"]}
evc = "0.1"

hashbrown = "0.9"