[package]
name = "charsub"
version = "0.2.0"
authors = ["Skarlett <zykl@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "charsub"

[dependencies]
smallvec = "*"
threadpool = "*"
tokio = { version = "1.0", features = ["full", "rt-multi-thread", "parking_lot"]}
evc = "0.1"
lazy_static = "*"

hashbrown = "0.9"

[dev-dependencies]
rand = "0.8"
lazy_static = "1.4"
paste = "1.0"
num_cpus = "*"
criterion = "0.3"

[[bench]]
name = "bench"
path = "bench/schedulers.rs"
harness = false
