[package]
name = "cli_tool"
version = "0.1.0"
authors = ["Skarlett <zykl@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

path = "main.rs"

[dependencies]
charsub = { path = "../charsub" }
structopt = { version = "0.3", feature = ["smallvec"] }
smallvec = "*"